--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -8,23 +8,28 @@
 {% endblock title %}
 
 {% block content %}
+    {% include "image-templates.html" with number_of_columns=number_of_columns images_list=images_list %}
+    <div class="not-found modal-window big dn" data-window=".not-found">
+        <h1 class="cw">Not found</h1>
+    </div>
     {% include 'header.html' %}
     <section class="image-search-section mt50px">
-        <label class="rounded-input-container flex js ac search-input-container">
-            <input name="search" class="search-input p14px" type="text" placeholder="Something.."/>
-            <button class="button ml5px find-button q-where" data-keys-handler="search-input">
+        <div class="flex jc ac search-input-container">
+            <span class="search-placeholder cg">Something separated by commas..</span>
+            <span class="rounded-input search-input p14px el-visibility" data-where="" data-el=".search-placeholder" contenteditable="true"></span>
+            <button class="button ml5px find-button qTags" data-q-tags="search-input">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                     <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
                 </svg>
             </button>
-        </label>
+        </div>
     </section>
     <section class="tags-list mt15px">
     {% if common_tags %}
         {% get_tag_weight common_tags as tags %}
         {% for tag in tags %}
-            <div class="button tag-name mr5px find-button q-where" href="{% url "main:home" %}?tags={{ tag.slug }}" data-keys-handler="{{ tag.slug }}">
-                <span class="{{ tag.slug }}" style="font-size: {{tag.weight|floatformat:0}}px;" data-keys="{{ tag.slug }}">{{ tag }}</span>
+            <div class="button tag-name mr5px find-button qTags" href="{% url "main:home" %}?tags={{ tag.slug }}" data-where="{{ tag.slug }}">
+                <span class="{{ tag.slug }}" style="font-size: {{tag.weight|floatformat:0}}px;">{{ tag }}</span>
             </div>
         {% endfor %}
     {% endif %}
@@ -39,47 +44,43 @@
         {% include 'messages.html' with messages=messages %}
         <section class="sorting-section flex jc">
             <div class="sort-list flex">
-                <button class="sort-item flex jc ac q-date sort-active" data-less-than="2022-12-31" data-more-than="2020-12-31" data-order="">
+                <button class="sort-item flex jc ac qDate sort-active" data-less-than="2022-12-31" data-more-than="2020-12-31" data-order=" " data-without-options="downloads:* rating:*">
                     <span class="sort-text ml5px">date</span>
                     <svg class="sort-down-arrow rotate0" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"></path></svg>
                 </button>
-                <button class="sort-item flex jc ac q-downloads" data-more-than="0" data-order="-">
+                <button class="sort-item flex jc ac qDownloads" data-more-than="0" data-order="-" data-without-options="created_at:* rating:*">
                     <span class="sort-text">downloads</span>
                     <svg class="sort-down-arrow" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"></path></svg>
                 </button>
-                <button class="sort-item flex jc ac q-rating" data-more-than="0" data-order="-">
+                <button class="sort-item flex jc ac qRating" data-order="-" data-without-options="downloads:* created_at:*">
                     <span class="sort-text">rating</span>
                     <svg class="sort-down-arrow" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"></path></svg>
                 </button>
             </div>
-            <div class="filter-list flex je ac" data-drop-list-id="drop-list-screen">
+            <div class="filter-list flex je ac modal-window" data-window=".screen.drop-list">
                 <span class="filter-item filter-text p10px">screen:</span>
                 <div class="filter-item flex fc">
-                    <button class="filter-text">all</button>
+                    <button id="screen-filter-name" class="filter-text">all</button>
                 </div>
-                <div id="drop-list-screen" class="screen drop-list dn">
+                <div class="screen drop-list dn" data-dont-close-if=".screen.drop-list">
                     <div class="screen-size-inputs flex jsb ac">
                         <span class="min-image-width filter-text ml15px" contenteditable="true" data-more-than="self">1024</span>
                         <span>x</span>
                         <span class="min-image-height filter-text mr15px" contenteditable="true" data-more-than="self">1024</span>
                     </div>
-                    <div class="flex">
-                        <div class="screen-size-options flex fc">
-                            <button class="filter-text mt15px q-ratio" data-less-than="1">Desktop</button>
-                            <button class="filter-text mt5px q-ratio" data-more-than="1">Phone</button>
-                        </div>
-                        <button class="button button--blue middle mt15px q-screen" data-q-redirect="min-image-width min-image-height">Find</button>
+                    <button class="button button--blue middle mt15px qWidth qHeight" data-q-width="min-image-width" data-q-height="min-image-height">Find</button>
+                    <div class="screen-size-options flex jsb ac mt15px">
+                        <button class="filter-text qRatio ratio-desktop" data-more-than="1" data-without-options="ratio:less_than">desktop</button>
+                        <span class="slash-delimiter cg">/</span>
+                        <button class="filter-text qRatio ratio-phone" data-less-than="1" data-without-options="ratio:more_than">phone</button>
+                        <span class="slash-delimiter cg">/</span>
+                        <button class="filter-text qRatio ratio-all active" data-without-options="ratio:*">all</button>
                     </div>
                 </div>
             </div>
         </section>
         {% if images_list %}
-            <ul class="images-list flex js as mt15px">
-                {% for column in columns %}
-                    <li class="image-column"></li>
-                {% endfor %}
-                {% include "image-block.html" with images=images_list %}
-            </ul>
+            <ul class="images-list flex js as mt15px"></ul>
             {% include "pagination.html" with page=images_list %}
         {% else %}
             <h2 class="p16px">There are no images available.</h2>
@@ -88,10 +89,10 @@
     {% include 'footer.html' %}
 {% endblock content %}
 {% block js %}
-    <script src="{% static 'js/modules/classes/ImageQueryApi.js' %}"></script>
-    <script src="{% static 'js/modules/classes/ImagePutApi.js' %}"></script>
+    <script src="{% static 'js/modules/classes/GetHelper.js' %}"></script>
+    <script src="{% static 'js/modules/classes/PatchHelper.js' %}"></script>
     <script src="{% static 'js/modules/classes/UserActions.js' %}"></script>
-    <script src="{% static 'js/modules/functions/sort.js' %}"></script>
-    <script src="{% static 'js/modules/functions/image_put.js' %}"></script>
+    <script src="{% static 'js/modules/classes/Pagination.js' %}"></script>
+    <script src="{% static 'js/modules/classes/ImageView.js' %}"></script>
     <script src="{% static 'js/pages/main/home.js' %}"></script>
 {% endblock %}
