--- a/static/css/index.css
+++ b/static/css/index.css
@@ -56,6 +56,8 @@
     width: 30%;
     text-align: center;
     margin-bottom: 5px;
+    background: white;
+    border-radius: 4px;
 }
 .messages__item:last-child { margin-bottom: 0; }
 /*.messages__item.error {*/
@@ -93,11 +95,47 @@
     border-left: 1px solid black;
 }
 
-
-input[type="file"] {
-    display: none;
+.modal-window.big {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: RGBA(0,0,0,.5);
+    z-index: 2;
 }
-.sqr-input-container > input, .disabled-field {
+
+.report-form {
+    padding: 2rem;
+    border-radius: 4px;
+    border-right: 1px solid rgba(26,26,26,.15);
+    background: #fff;
+    box-shadow: 0 0 0 rgb(0 0 0 / 25%), 0 5px 6px rgb(0 0 0 / 22%);
+}
+.report-form > h3 {
+    text-align: start;
+}
+.report-form > textarea, .report-form > input {
+    padding: .6em;
+    position: relative;
+    min-width: 30rem;
+    border-radius: 3px;
+    border: 1px solid #e8e8e8;
+    vertical-align: middle;
+    -moz-appearance: textfield;
+    -webkit-appearance: textfield;
+}
+.report-description {
+    height: 30rem;
+}
+
+input[type="file"] {    display: none;
+}
+.sqr-input, .sqr-input-container > input, .disabled-field {
     padding: .6em;
     position: relative;
     width: 100%;
@@ -107,7 +145,7 @@ input[type="file"] {
     -moz-appearance: textfield;
     -webkit-appearance: textfield;
 }
-.rounded-input-container > input {
+.rounded-input, .rounded-input-container > input {
     display: flex;
     justify-content: start;
     align-items: center;
@@ -131,7 +169,13 @@ input[type="file"] {
     width: 100%;
 }
 .search-input-container {
+    position: relative;
     width: 20rem;
+}
+.search-placeholder {
+    position: absolute;
+    left: 1rem;
+    z-index: -1;
 }
 
 .avatar {
@@ -241,10 +285,18 @@ input[type="file"] {
     width: 12rem;
 }
 .min-image-width, .min-image-height {
+    padding: 0.5rem 0.1rem;
     max-width: 4rem;
 }
+.ratio-desktop:hover, .ratio-phone:hover, .ratio-all:hover {
+    cursor: pointer;
+    color: #0064f9;
+}
+.ratio-desktop.active, .ratio-phone.active, .ratio-all.active {
+    color: #0064f9;
+}
 .screen-size-options {
-    width: 75%;
+    width: 100%;
 }
 
 .images-section {
@@ -327,43 +379,10 @@ input[type="file"] {
 .pagination__page {
     margin: 0 40px;
 }
+.choices.disabled {
+    opacity: .5;
+}
 
-.report-wrapper {
-    position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    background: RGBA(0,0,0,.5);
-    z-index: 2;
-}
-.report-form {
-    padding: 2rem;
-    border-radius: 4px;
-    border-right: 1px solid rgba(26,26,26,.15);
-    background: #fff;
-    box-shadow: 0 0 0 rgb(0 0 0 / 25%), 0 5px 6px rgb(0 0 0 / 22%);
-}
-.report-form > h3 {
-    text-align: start;
-}
-.report-form > textarea, .report-form > input {
-    padding: .6em;
-    position: relative;
-    min-width: 30rem;
-    border-radius: 3px;
-    border: 1px solid #e8e8e8;
-    vertical-align: middle;
-    -moz-appearance: textfield;
-    -webkit-appearance: textfield;
-}
-.report-description {
-    height: 30rem;
-}
 .image-detail {
     position: relative;
     display: flex;
@@ -711,7 +730,7 @@ input[type="file"] {
 .p08rem { padding: .8rem; }
 
 .dn {
-    display: none;
+    display: none !important;
 }
 
 .prel {
@@ -741,6 +760,10 @@ input[type="file"] {
 
 .blurred {
     filter: blur(1px);
+}
+.slash-delimiter {
+    font-size: 2rem;
+    color: RGBA(0,0,0,.1);
 }
 
 h1, h2, h3 {
