--- a/main/templates/cabinet.html
+++ b/main/templates/cabinet.html
@@ -3,22 +3,22 @@
 {% load static %}
 
 {% block title %}
-    Caninet
+    Cabinet
 {% endblock title %}
 
 {% block content %}
+    {% include "image-templates.html" with number_of_columns=number_of_columns images_list=images_list %}
     {% include 'header.html' %}
     <section class="image-search-section mt50px">
-        <form action="{% url 'main:cabinet' username=user %}" method="GET" class="image-search__form">
-            <label class="rounded-input-container flex js ac search-input-container">
-                <input name="search" class="p14px" type="text" placeholder="Something of your photos.."/>
-                <button class="button ml5px">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                        <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-                    </svg>
-                </button>
-            </label>
-        </form>
+        <div class="flex jc ac search-input-container">
+            <span class="search-placeholder cg">Something separated by commas..</span>
+            <span class="rounded-input search-input p14px el-visibility" data-where="" data-el=".search-placeholder" contenteditable="true"></span>
+            <button class="button ml5px find-button qTags" data-q-tags="search-input">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+                </svg>
+            </button>
+        </div>
     </section>
     <section class="account-section flex jc ac mt50px">
         <div class="panel flex jc ac p10px">
@@ -38,24 +38,21 @@
     <section class="images-section flex jc ac">
         {% include "messages.html" with messages=messages %}
         {% if images_list %}
-            <ul class="images-list flex js as mt50px">
-                {% for column in columns %}
-                    <li class="image-column"></li>
-                {% endfor %}
-                {% include "image-block.html" with images=images_list %}
-            </ul>
-            {% include "pagination.html" with page=images_list %}
+            <ul class="images-list flex js as mt50px"></ul>
+            {% include "pagination.html" with total_pages=total_pages %}
         {% else %}
-            <h1 class="mt50px mb20px">You have no images. To upload an image go to <a style="text-decoration: underline"
-                                                                                      href="{% url 'main:add_image' %}">Upload
-                Images.</a></h1>
+            <h1 class="mt50px mb20px">You have no images. To upload an image go to
+                <a style="text-decoration: underline" href="{% url 'main:add_image' %}">Upload Images.</a>
+            </h1>
         {% endif %}
     </section>
     {% include 'footer.html' %}
 {% endblock content %}
 {% block js %}
-    <script src="{% static 'js/modules/classes/ImagePatch.js' %}"></script>
-    <script src="{% static 'js/modules/functions/image_patch.js' %}"></script>
-    <script src="{% static 'js/modules/functions/sort.js' %}"></script>
+    <script src="{% static 'js/modules/classes/GetHelper.js' %}"></script>
+    <script src="{% static 'js/modules/classes/PatchHelper.js' %}"></script>
+    <script src="{% static 'js/modules/classes/UserActions.js' %}"></script>
+    <script src="{% static 'js/modules/classes/Pagination.js' %}"></script>
+    <script src="{% static 'js/modules/classes/ImageView.js' %}"></script>
     <script src="{% static 'js/pages/main/cabinet.js' %}"></script>
 {% endblock %}
