--- a/main/templates/detailed_image_view.html
+++ b/main/templates/detailed_image_view.html
@@ -7,12 +7,13 @@
 {% endblock title %}
 
 {% block content %}
+    {% include "image-templates.html" with number_of_columns=number_of_columns images_list=images_list %}
     {% if report_form.data %}
-        <div class="report-wrapper modal-window" data-window="report-wrapper">
+        <div class="report-wrapper modal-window" data-window=".report-wrapper">
             {% include 'messages.html' with messages=messages %}
         </div>
     {% else %}
-        <div class="report-wrapper dn modal-window big" data-window="report-wrapper">
+        <div class="report-wrapper dn modal-window big" data-window=".report-wrapper" data-dont-close-if=".report-form">
             <h1 class="cw">Report</h1>
             <form class="report-form mt15px" method="post">
                 {% csrf_token %}
@@ -38,16 +39,15 @@
     {% endif %}
             {% include 'header.html' %}
             <section class="image-search-section mt50px">
-                <form method="GET" class="image-search__form">
-                    <label class="rounded-input-container flex js ac">
-                        <input name="search" class=" p14px" type="text" placeholder="Something.."/>
-                        <button class="button ml5px">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                                <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-                            </svg>
-                        </button>
-                    </label>
-                </form>
+                <div class="flex jc ac search-input-container">
+                    <span class="search-placeholder cg">Something separated by commas..</span>
+                    <span class="rounded-input search-input p14px el-visibility" data-where="" data-el=".search-placeholder" contenteditable="true"></span>
+                    <button class="button ml5px find-button qTags" data-q-tags="search-input">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
+                        </svg>
+                    </button>
+                </div>
             </section>
             <section class="image-detail mt50px">
                 <div class="flex jc">
@@ -73,7 +73,7 @@
                         {% endif %}
                     </div>
                     <div class="image-detail__image mb20px">
-                        <button class="top-image-options button rating-button" data-pk="{{ image.pk }}" data-counter="rating_{{ image.pk }}">
+                        <button class="top-image-options button rating-button" data-pk="{{ image.pk }}" data-counter="rating_{{ image.pk }}" data-data="1">
                             {% with image.followers.all as followers %}
                             {% if followers %}
                                 {% for follower in followers %}
@@ -116,7 +116,7 @@
                         </button>
                         <div class="image-block">
                             <img title="{{ image.width }} x {{ image.height }}" src="{{ image }}">
-                            <div class="image-information dn modal-window" data-window="image-information">
+                            <div class="image-information dn modal-window" data-window=".image-information" data-dont-close-if=".information-card">
                                 <div class="information-card">
                                     <p class="cg">Photo information</p>
                                     <h1 class="image__title">{{ image.title }}</h1>
@@ -145,13 +145,13 @@
                             </div>
                         </div>
                         <div class="flex jc bottom-image-options">
-                            <button class="button button--white mr15px modal-window" data-window="report-wrapper">Report</button>
+                            <button class="button button--white mr15px modal-window" data-window=".report-wrapper">Report</button>
                             {% with image.followers.all as followers %}
                             {% with followers.0 as follower %}
-                            <button class="button button--blue middle download {% if follower.downloaded %}downloaded{% endif %}" data-pk="{{ image.pk }}" data-counter="downloads_{{ image.pk }}">Download</button>
+                            <a href="{{ image }}" download="{{ image.title }}.{{ image.extension }}" class="button button--blue middle download {% if follower.downloaded %}downloaded{% endif %}" data-pk="{{ image.pk }}" data-counter="downloads_{{ image.pk }}">Download</a>
                             {% endwith %}
                             {% endwith %}
-                            <button class="button button--white ml15px modal-window" data-window="image-information">Information</button>
+                            <button class="button button--white ml15px modal-window" data-window=".image-information">Information</button>
                         </div>
                     </div>
                     <div class="image-detail__edit">
@@ -191,10 +191,7 @@
             <section class="images-section flex jc ac mt50px">
                 <h1 class="mb20px">SIMILAR IMAGES</h1>
                 <ul class="images-list flex js as">
-                    {% for column in columns %}
-                        <li class="image-column"></li>
-                    {% endfor %}
-                    {% include "image-block.html" with images=similar_images %}
+                    <ul class="images-list flex js as mt15px"></ul>
                 </ul>
             </section>
             {% include 'footer.html' %}
@@ -205,10 +202,10 @@
 {% endblock content %}
 
 {% block js %}
-    <script src="{% static 'js/modules/classes/ImagePatch.js' %}"></script>
+    <script src="{% static 'js/modules/classes/PatchHelper.js' %}"></script>
     <script src="{% static 'js/modules/classes/UserActions.js' %}"></script>
-    <script src="{% static 'js/modules/functions/image_patch.js' %}"></script>
-    <script src="{% static 'js/modules/functions/sort.js' %}"></script>
+    <script src="{% static 'js/modules/classes/Pagination.js' %}"></script>
+    <script src="{% static 'js/modules/classes/ImageView.js' %}"></script>
     <script src="{% static 'js/pages/main/detailed_image_view.js' %}"></script>
     {{ form.media }}
 {% endblock %}
