--- a/static/css/index.css
+++ b/static/css/index.css
@@ -379,6 +379,9 @@ input[type="file"] {    display: none;
 .pagination__page {
     margin: 0 40px;
 }
+.choices {
+    padding: .5rem 2rem .5rem 2rem;
+}
 .choices.disabled {
     opacity: .5;
 }
@@ -425,7 +428,7 @@ input[type="file"] {    display: none;
     position: absolute;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     top: 0;
     left: 0;
@@ -435,7 +438,7 @@ input[type="file"] {    display: none;
     z-index: 2;
 }
 .information-card {
-    margin-bottom: 50%;
+    margin-top: 10%;
     max-width: 95%;
     background: RGB(255,255,255);
     padding: 2rem;
