Image-hash, image-size e.t.c in ImageUploadForm now generated without copying request.FIlES

--- a/main/templates/add.html
+++ b/main/templates/add.html
@@ -48,6 +48,6 @@
 {% block js %}
     <script src="{% static 'js/modules/functions/view_uploaded_image.js' %}"></script>
     <script src="{% static 'js/pages/main/add_image.js' %}"></script>
-    <script src='https://www.google.com/recaptcha/api.js'></script>
+{#    <script src='https://www.google.com/recaptcha/api.js'></script>#}
     {{ image_form.media }}
 {% endblock %}
