Home and cabinet pages refactoring, GetHelper.cleaning - rewritten

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -48,7 +48,7 @@
                     <span class="sort-text ml5px">date</span>
                     <svg class="sort-down-arrow rotate0" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"></path></svg>
                 </button>
-                <button class="sort-item flex jc ac qDownloads" data-more-than="0" data-order="-" data-without-options="created_at:* rating:*">
+                <button class="sort-item flex jc ac qDownloads" data-order="-" data-without-options="created_at:* rating:*">
                     <span class="sort-text">downloads</span>
                     <svg class="sort-down-arrow" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"></path></svg>
                 </button>
