--- a/main/templates/add.html
+++ b/main/templates/add.html
@@ -45,9 +45,12 @@
     {% include 'footer.html' %}
 {% endblock content %}
 
+{% block css %}
+    {{ image_form.media.css }}
+{% endblock %}
 {% block js %}
+    {{ image_form.media.js }}
     <script src="{% static 'js/modules/functions/view_uploaded_image.js' %}"></script>
     <script src="{% static 'js/pages/main/add_image.js' %}"></script>
-{#    <script src='https://www.google.com/recaptcha/api.js'></script>#}
-    {{ image_form.media }}
+    <script src='https://www.google.com/recaptcha/api.js'></script>
 {% endblock %}
