--- a/main/templates/detailed_image_view.html
+++ b/main/templates/detailed_image_view.html
@@ -25,16 +25,26 @@
             </form>
         </div>
     {% endif %}
+    <div class="delete-image__wrapper dn modal-window" data-window="delete-image__wrapper">
+        <form class="delete-image__form" action="{% url 'main:delete_image' slug=image.slug %}" method="post">
+            {% csrf_token %}
+            <h1 class="cg">Are you sure you want to delete this item?</h1>
+            <div class="flex jc">
+                <button class="button middle button--blue mr10px" type="submit" name="delete">Yes</button>
+                <button class="button middle button--gray modal-window" data-window="delete-image__wrapper" type="button">No</button>
+            </div>
+        </form>
+    </div>
     {% if moderator or image.author == request.user %}
-    <div class="flex">
-        <div class="edit-image__collision-wrapper mr15px">
-            <div class="edit-image__panel">
-                <div class="edit-tags__buttons">
-                    <button type="submit" name="edit" class="edit-tags__option p10px" form="edit-tags">Save changes</button>
-                    <button type="submit" name="delete" class="edit-tags__option p10px" onclick="return confirm('Are you sure you want to delete this item?');" form="delete-image">Delete image</button>
+        <div class="flex">
+            <div class="edit-image__collision-wrapper mr15px">
+                <div class="edit-image__panel">
+                    <div class="edit-tags__buttons">
+                        <button type="submit" name="edit" class="edit-tags__option p10px" form="edit-tags">Save changes</button>
+                        <button name="delete" class="edit-tags__option p10px modal-window" data-window="delete-image__wrapper">Delete image</button>
+                    </div>
                 </div>
             </div>
-        </div>
         <div class="flex fc w100per">
     {% endif %}
             {% include 'header.html' %}
@@ -166,9 +176,6 @@
                                         </div>
                                     </div>
                                 </form>
-                                <form id="delete-image" action="{% url 'main:delete_image' slug=image.slug %}" method="post">
-                                    {% csrf_token %}
-                                </form>
                             </div>
                         {% else %}
                             <div class="tags-panel flex js ac">
@@ -196,16 +203,19 @@
             </section>
             {% include 'footer.html' %}
     {% if moderator or image.author == request.user %}
+            </div>
         </div>
-    </div>
     {% endif %}
 {% endblock content %}
 
+{% block css %}
+    {{ form.media.css }}
+{% endblock %}
 {% block js %}
     <script src="{% static 'js/modules/classes/PatchHelper.js' %}"></script>
     <script src="{% static 'js/modules/classes/UserActions.js' %}"></script>
     <script src="{% static 'js/modules/classes/Pagination.js' %}"></script>
     <script src="{% static 'js/modules/classes/ImageView.js' %}"></script>
     <script src="{% static 'js/pages/main/detailed_image_view.js' %}"></script>
-    {{ form.media }}
+    {{ form.media.js }}
 {% endblock %}
