--- a/static/css/index.css
+++ b/static/css/index.css
@@ -379,6 +379,43 @@ input[type="file"] {    display: none;
 .pagination__page {
     margin: 0 40px;
 }
+
+.report-wrapper, .delete-image__wrapper, .approve-image__wrapper {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: RGBA(0,0,0,.5);
+    z-index: 2;
+}
+.report-form, .delete-image__wrapper .wrapper, .approve-image__wrapper .wrapper {
+    padding: 2rem;
+    border-radius: 4px;
+    border-right: 1px solid rgba(26,26,26,.15);
+    background: #fff;
+    box-shadow: 0 0 0 rgb(0 0 0 / 25%), 0 5px 6px rgb(0 0 0 / 22%);
+}
+.report-form > h3 {
+    text-align: start;
+}
+.report-form > textarea, .report-form > input {
+    padding: .6em;
+    position: relative;
+    min-width: 30rem;
+    border-radius: 3px;
+    border: 1px solid #e8e8e8;
+    vertical-align: middle;
+    -moz-appearance: textfield;
+    -webkit-appearance: textfield;
+}
+.report-description {
+    height: 30rem;
+}
 .choices {
     padding: .5rem 2rem .5rem 2rem;
 }
@@ -696,6 +733,7 @@ input[type="file"] {    display: none;
 
 
 /*Helpers*/
+.m0 { margin: 0 }
 .m5px { margin: 5px; }
 
 .mlA { margin-left: auto; }
@@ -724,6 +762,7 @@ input[type="file"] {    display: none;
 
 .pr10px { padding-right: 10px; }
 
+.p0 { padding: 0 }
 .pb2px { padding: 2px; }
 
 .p10px { padding: 10px; }
