--- a/main/templates/moderator-panel.html
+++ b/main/templates/moderator-panel.html
@@ -11,21 +11,17 @@
         <h1 class="cw">Not found</h1>
     </div>
     <div class="delete-image__wrapper dn modal-window" data-window=".delete-image__wrapper">
-        <div class="wrapper">
-            <h1 class="cg">Are you sure you want to delete this image?</h1>
-            <div class="flex jc">
-                <button class="button middle button--blue mr10px delete-button">Yes</button>
-                <button class="button middle button--gray modal-window " data-window=".delete-image__wrapper" type="button">No</button>
-            </div>
+        <h1 class="cw">Are you sure you want to delete this image?</h1>
+        <div class="flex jc mt25px">
+            <button class="button middle button--blue mr10px approve-button">Yes</button>
+            <button class="button middle button--white modal-window cw" data-window=".approve-image__wrapper" type="button">No</button>
         </div>
     </div>
     <div class="approve-image__wrapper dn modal-window" data-window=".approve-image__wrapper">
-        <div class="wrapper">
-            <h1 class="cg">Are you sure you want to approve this image?</h1>
-            <div class="flex jc">
-                <button class="button middle button--blue mr10px approve-button">Yes</button>
-                <button class="button middle button--gray modal-window" data-window=".approve-image__wrapper" type="button">No</button>
-            </div>
+        <h1 class="cw">Are you sure you want to approve this image?</h1>
+        <div class="flex jc mt25px">
+            <button class="button middle button--blue mr10px approve-button">Yes</button>
+            <button class="button middle button--white modal-window cw" data-window=".approve-image__wrapper" type="button">No</button>
         </div>
     </div>
     <div class="flex jc">
@@ -113,4 +109,5 @@
     <script src="{% static 'js/modules/classes/UserActions.js' %}"></script>
     <script src="{% static 'js/modules/functions/mp.js' %}"></script>
     <script src="{% static 'js/pages/main/moderator-panel.js' %}"></script>
+
 {% endblock %}
