--- a/static/css/index.css
+++ b/static/css/index.css
@@ -85,7 +85,10 @@
     box-shadow: 0 0 0 rgb(0 0 0 / 25%), 0 5px 6px rgb(0 0 0 / 22%);
     border-radius: 4px;
 }
-.errorlist > li {
+.success {
+    color: #176520;
+}
+.error, .errorlist > li {
     color: darkred;
     margin: .25rem 0;
     text-align: center;
@@ -380,7 +383,7 @@ input[type="file"] {    display: none;
     margin: 0 40px;
 }
 
-.report-wrapper, .delete-image__wrapper, .approve-image__wrapper {
+.report-wrapper, .modal-window--black {
     position: fixed;
     display: flex;
     align-items: center;
@@ -393,7 +396,7 @@ input[type="file"] {    display: none;
     background: RGBA(0,0,0,.5);
     z-index: 2;
 }
-.report-form, .delete-image__wrapper .wrapper, .approve-image__wrapper .wrapper {
+.report-form, .modal-window--black .wrapper {
     padding: 2rem;
     border-radius: 4px;
     border-right: 1px solid rgba(26,26,26,.15);
