--- a/main/templates/moderator-panel.html
+++ b/main/templates/moderator-panel.html
@@ -7,21 +7,30 @@
 {% endblock title %}
 
 {% block content %}
-    <div class="delete-image__wrapper modal-window--black dn modal-window" data-window=".delete-image__wrapper">
+    <div class="delete-image__modal-window modal-window--black dn modal-window" data-window=".delete-image__modal-window">
         <div class="wrapper">
             <h2 class="cg">Are you sure you want to delete this image?</h2>
             <div class="flex jc">
                 <button class="button middle button--blue mr10px delete-button">Yes</button>
-                <button class="button middle button--gray modal-window " data-window=".delete-image__wrapper" type="button">No</button>
+                <button class="button middle button--gray modal-window " data-window=".delete-image__modal-window" type="button">No</button>
             </div>
         </div>
     </div>
-    <div class="approve-image__wrapper modal-window--black dn modal-window" data-window=".approve-image__wrapper">
+    <div class="approve-image__modal-window modal-window--black dn modal-window" data-window=".approve-image__modal-window">
         <div class="wrapper">
             <h2 class="cg">Are you sure you want to approve this image?</h2>
             <div class="flex jc">
                 <button class="button middle button--blue mr10px approve-button">Yes</button>
-                <button class="button middle button--gray modal-window" data-window=".approve-image__wrapper" type="button">No</button>
+                <button class="button middle button--gray modal-window" data-window=".approve-image__modal-window" type="button">No</button>
+            </div>
+        </div>
+    </div>
+    <div class="ban-user__modal-window modal-window--black dn modal-window" data-window=".ban-user__modal-window">
+        <div class="wrapper">
+            <h2 class="cg">Are you sure you want to ban this user?</h2>
+            <div class="flex jc">
+                <button class="button middle button--blue mr10px ban-button" data-pk="1">Yes</button>
+                <button class="button middle button--gray modal-window" data-window=".ban-user__modal-window" type="button">No</button>
             </div>
         </div>
     </div>
@@ -29,8 +38,8 @@
         <div class="edit-image__collision-wrapper mr15px">
             <div class="edit-image__panel">
                 <div class="edit-tags__buttons">
-                    <button type="button" class="edit-tags__option p10px modal-window mr10px" data-window=".approve-image__wrapper">Approve</button>
-                    <button type="button" class="edit-tags__option p10px modal-window mr10px" data-window=".delete-image__wrapper">Delete image</button>
+                    <button type="button" class="edit-tags__option p10px modal-window mr10px" data-window=".approve-image__modal-window">Approve</button>
+                    <button type="button" class="edit-tags__option p10px modal-window mr10px" data-window=".delete-image__modal-window">Delete image</button>
                     <button type="submit" name="end-work" class="edit-tags__option p10px" form="end-work">End work</button>
                 </div>
             </div>
@@ -46,6 +55,7 @@
                             <p class="full-name ml05rem"></p>
                         </a>
                         <span class="created-time p06rem"></span>
+                        <button type="button" class="button button--red small mr5px modal-window" data-window=".ban-user__modal-window">Ban user</button>
                     </div>
                     <div class="image-detail__image mb20px">
                         <img class="image-detail__img" src="#">
@@ -97,6 +107,5 @@
     <script src="{% static 'js/modules/classes/ImageView.js' %}"></script>
     <script src="{% static 'js/modules/classes/UserActions.js' %}"></script>
     <script src="{% static 'js/modules/classes/Messages.js' %}"></script>
-    <script src="{% static 'js/modules/functions/mp.js' %}"></script>
     <script src="{% static 'js/pages/main/moderator-panel.js' %}"></script>
 {% endblock %}
