--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -42,7 +42,7 @@
         {% include 'messages.html' with messages=messages %}
         <section class="sorting-section flex jc">
             <div class="sort-list flex">
-                <button class="sort-item flex jc ac qDate sort-active" data-less-than="2022-12-31" data-more-than="2020-12-31" data-order=" " data-without-options="downloads:* rating:*">
+                <button class="sort-item flex jc ac qDate sort-active" data-order=" " data-without-options="downloads:* rating:*">
                     <span class="sort-text ml5px">date</span>
                     <svg class="sort-down-arrow rotate0" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"></path></svg>
                 </button>
