--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -11,17 +11,7 @@
     {% include "image-templates.html" with number_of_columns=number_of_columns images_list=images_list %}
     {% include "not-found.html" %}
     {% include 'header.html' %}
-    <section class="image-search-section mt50px">
-        <div class="flex jc ac search-input-container">
-            <span class="search-placeholder cg">Something separated by commas..</span>
-            <span class="rounded-input search-input p14px el-visibility" data-where="" data-el=".search-placeholder" contenteditable="true"></span>
-            <button class="button ml5px find-button qTags" data-q-tags="search-input">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                    <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-                </svg>
-            </button>
-        </div>
-    </section>
+    {% include 'image-search.html' %}
     <section class="tags-list mt15px">
     {% if common_tags %}
         {% get_tag_weight common_tags as tags %}
