--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -1,8 +1,8 @@
 *,
 *::before,
 *::after {
-    margin: unset;
-    padding: unset;
+    margin: 0;
+    padding: 0;
     color: inherit;
     box-sizing: border-box;
     outline: none;
