Fix: find-buttond changed to search-button CSS

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -172,7 +172,7 @@ input[type="file"] {    display: none;
     position: relative;
     width: 20rem;
 }
-.find-button {
+.search-button {
     height: 2.5rem;
     width: 2.5rem;
 }
