--- a/static/css/index.css
+++ b/static/css/index.css
@@ -641,11 +641,12 @@ input[type="file"] {    display: none;
 .auth-form__enter-btn {
     width: 100%;
 }
-.auth-form__svg-icon {
-    position: absolute;
-    left: .75rem;
+.auth-form__google {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.auth-form__svg-icon svg {
+.auth-form__google > svg {
     fill: #fff;
     width: 27px;
 }
@@ -863,6 +864,10 @@ img {
         overflow-x: hidden;
     }
 
+    .messages__item {
+        width: unset;
+    }
+
     .search-input-container {
         padding: 0 1rem;
         display: flex;
@@ -943,6 +948,41 @@ img {
         margin: 1rem;
         display: flex;
         justify-content: center;
+        width: 100%;
+    }
+
+    .auth-form, .reg-form {
+        padding: 0 .5rem;
+        width: 100%;
+    }
+
+    .settings-section > .bottom-content, .settings-password-section > .center-content {
+        padding: 0 .5rem;
+        width: 100%;
+    }
+
+    .auth-section > .subtitle-message {
+        padding: 0 .5rem;
+        width: 100%;
+    }
+
+    .account-section > .panel {
+        border-radius: unset;
+        box-shadow: unset;
+        flex-direction: column;
+    }
+    .account-section__info {
+        border: unset;
+    }
+    .account-section__options {
+        padding: 10px;
+        margin-top: 15px;
+        border-radius: 4px;
+        box-shadow: 0 0 0 rgb(0 0 0 / 25%), 0 5px 6px rgb(0 0 0 / 22%);
+    }
+
+    .add-images__form {
+        padding: 0 .5rem;
         width: 100%;
     }
 }
